# MTranslate

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: glossary.example.yaml
assets/fonts/: README.md
mtranslate/: __init__.py  cli.py  constants.py  dictionary_rules.py  env.py  glossary.py  inpaint_backends.py  jsonl_logger.py  model_manager.py  native.py  native_tools.swift  ocr_backends.py  paths.py  pipeline.py  translator_backends.py  types.py  utils.py  vlm_backends.py
scripts/: mtranslate.sh  run_editor.sh
ui/MTranslateEditor/: Package.swift
ui/MTranslateEditor/Sources/MTranslateEditor/: BackendBridge.swift  EditorView.swift  EditorViewModel.swift  MTranslateEditorApp.swift  Models.swift
